--- a/PFS/docker-compose.yml
+++ b/PFS/docker-compose.yml
@@ -15,8 +15,9 @@ services:
     image: mysql:latest
     container_name: db-container
     environment:
+      MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: smartspenddb
-      MYSQL_USER: root
+      MYSQL_USER: user
       MYSQL_PASSWORD: root
     ports:
       - "3306:3306"
