--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,29 @@
 version: '3.8'
 
 services:
-  web:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: web-container
-    ports:
-      - "9090:80"
-    depends_on:
-      - database
-
-  database:
+  db:
     image: mysql:latest
-    container_name: db-container
+    container_name: mysql-db
+    restart: always
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: smartspenddb
       MYSQL_USER: user
       MYSQL_PASSWORD: root
-    ports:
-      - "3306:3306"
     volumes:
-      - database_volume:/var/lib/mysql
+      - db_data:/var/lib/mysql
+
+  web:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: web-server
+    ports:
+      - "9090:80"
+    depends_on:
+      - db
+    volumes:
+      - ./PFS:/var/www/html
 
 volumes:
-  database_volume:
+  db_data:
